--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -15,7 +15,8 @@
         // "emitDecoratorMetadata": true,
         // "experimentalDecorators": true,
         "strict": true,
-        "declaration": true
+        "declaration": true,
+        "typeRoots": [ "./node_modules/@types", "./types" ]
     },
   "include": ["src"],
   "exclude": ["node_modules", "src/**/__tests__"]
