--- a/server/package.json
+++ b/server/package.json
@@ -35,7 +35,7 @@
     "typescript": "^4.0.3"
   },
   "scripts": {
-    "start:server": "nodemon --exec ts-node src/index.ts",
+    "start": "nodemon --exec ts-node src/index.ts",
     "watch": "ts-node-dev --respawn index.dev.ts",
     "generate": "graphql-codegen",
     "test": "jest",
