--- a/.gitignore
+++ b/.gitignore
@@ -37,6 +37,7 @@ bower_components
 # Compiled binary addons (https://nodejs.org/api/addons.html)
 build/Release
 server/functions/bundle
+client/build
 
 # Dependency directories
 server/node_modules/
