--- a/server/codegen.yml
+++ b/server/codegen.yml
@@ -1,9 +1,10 @@
-schema: ./src/**/*.typedefs.ts
+schema: ./src/macro-product/macroProduct.typedefs.ts
 generates: 
-    ./src/types/graphql.generated.ts:
+    ./src/types/macroProduct.typedefs.d.ts:
         plugins:
             - typescript
             - typescript-resolvers
+            - typescript-graphql-files-modules
         config:
             noSchemaStitching: true
             useIndexSignature: true
