--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -15,8 +15,8 @@
         // "emitDecoratorMetadata": true,
         // "experimentalDecorators": true,
         "strict": true,
-        "declaration": true,
-        "typeRoots": [ "./node_modules/@types", "./types", "./functions/bundle" ]
+        "declaration": true
+        // "typeRoots": [ "./node_modules/@types", "./types", "./functions/bundle" ]
     },
   "include": ["src"],
   "exclude": ["node_modules", "src/**/__tests__"]
