--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "license": "MIT",
   "scripts": {
     "prebuild:server": "cd server/ && yarn install",
-    "prebuild:app": "cd client/ && yarn install",
-    "build:app": "yarn --cwd client/ build",
+    "prebuild:client": "cd client/ && yarn install",
+    "build:client": "yarn --cwd client/ build",
     "build:server": "yarn --cwd server/ bundle",
-    "start:app": "yarn --cwd client/ start",
+    "start:client": "yarn --cwd client/ start",
     "start:server": "yarn --cwd server/ start"
   }
 }
