--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
     "ts-node": "^9.0.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.11.6",
     "@babel/preset-env": "^7.11.5",
     "@babel/preset-typescript": "^7.10.4",
     "@graphql-codegen/cli": "^1.17.8",
