--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -14,7 +14,7 @@
         // "baseUrl": ".",
         // "emitDecoratorMetadata": true,
         // "experimentalDecorators": true,
-        "strict": true,
+        // "strict": true,
         "declaration": true,
         "typeRoots": [ "./node_modules/@types", "./types", "./functions/bundle" ]
     },
