try to print tsc version on netlify image

--- a/server/package.json
+++ b/server/package.json
@@ -44,7 +44,7 @@
     "test:w": "yarn test --watch",
     "test:c": "yarn test --coverage",
     "test:w:c": "yarn test --watch --coverage",
-    "bundle": "tsc"
+    "bundle": "npm ls jest"
   },
   "jest": {
     "testMatch": [
