--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -16,7 +16,7 @@
         // "experimentalDecorators": true,
         "strict": true,
         "declaration": true,
-        "typeRoots": [ "./node_modules/@types", "./types", "./functions/bundle" ]
+        "typeRoots": [ "./node_modules/@types", "./types", "./functions/bundle", "./functions/bundle/types" ]
     },
   "include": ["src/**/*.ts", "src/**/*.tsx"],
   "exclude": ["node_modules", "src/**/__tests__"]
