--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -4,7 +4,7 @@
         "pretty": true,
         "module": "commonjs",
         "sourceMap": true,
-        "target": "es2019",
+        "target": "es5",
         "outDir": "./functions/bundle",
         "lib": ["ES6"],
         "resolveJsonModule": true, 
@@ -18,6 +18,6 @@
         "declaration": true,
         "typeRoots": [ "./node_modules/@types", "./types", "./functions/bundle", "./functions/bundle/types" ]
     },
-  "include": ["src/**/*.ts", "src/**/*.tsx"],
+  "include": ["src"],
   "exclude": ["node_modules", "src/**/__tests__"]
 }
