--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -18,6 +18,6 @@
         "declaration": true,
         "typeRoots": [ "./node_modules/@types", "./types", "./functions/bundle", "./functions/bundle/types" ]
     },
-  "include": ["src"],
+  "include": ["src/**/*.ts", "src/**/*.tsx"],
   "exclude": ["node_modules", "src/**/__tests__"]
 }
