--- a/.gitignore
+++ b/.gitignore
@@ -36,7 +36,7 @@ bower_components
 
 # Compiled binary addons (https://nodejs.org/api/addons.html)
 build/Release
-# server/functions/bundle
+server/functions/bundle
 client/build
 
 # Dependency directories
