--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "prebuild:server": "yarn install --cwd server/",
+    "prebuild:server": "yarn install --cwd server/ && cd server/ && yarn tsc --version",
     "prebuild:client": "yarn install --cwd client/",
     "build:client": "yarn --cwd client/ build",
     "build:server": "yarn --cwd server/ bundle",
