--- a/server/package.json
+++ b/server/package.json
@@ -22,7 +22,6 @@
     "@babel/preset-typescript": "^7.10.4",
     "@graphql-codegen/cli": "^1.17.8",
     "@graphql-codegen/typescript": "^1.17.9",
-    "@graphql-codegen/typescript-graphql-files-modules": "^1.17.8",
     "@graphql-codegen/typescript-resolvers": "^1.17.9",
     "@types/jest": "^26.0.14",
     "@types/node": "^14.11.2",
@@ -44,6 +43,7 @@
     "test:w": "yarn test --watch",
     "test:c": "yarn test --coverage",
     "test:w:c": "yarn test --watch --coverage",
+    "prebundle": "yarn generate",
     "bundle": "tsc"
   },
   "jest": {
