--- a/client/package.json
+++ b/client/package.json
@@ -7,10 +7,6 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
-    "@types/jest": "^24.0.0",
-    "@types/node": "^12.0.0",
-    "@types/react": "^16.9.0",
-    "@types/react-dom": "^16.9.0",
     "apollo-client": "^2.6.10",
     "graphql": "^15.3.0",
     "history": "^5.0.0",
@@ -68,7 +64,11 @@
     "babel-loader": "^8.1.0",
     "prettier": "^2.1.1",
     "react-is": "^16.13.1",
-    "react-test-renderer": "^16.13.1"
+    "react-test-renderer": "^16.13.1",
+    "@types/jest": "^26.0.14",
+    "@types/node": "^12.0.0",
+    "@types/react": "^16.9.0",
+    "@types/react-dom": "^16.9.0"
   },
   "jest": {
     "collectCoverageFrom": [
