generate source map for not production environment

--- a/netlify.toml
+++ b/netlify.toml
@@ -2,3 +2,9 @@
   command = "yarn build"
   functions = "server/functions"
   publish = "client/build"
+
+[build.environment]
+  GENERATE_SOURCEMAP = "true"
+
+[build.production.environment]
+  GENERATE_SOURCEMAP = "false"
