--- a/.gitignore
+++ b/.gitignore
@@ -40,7 +40,6 @@ server/functions/bundle
 client/build
 
 # Dependency directories
-server/node_modules/
 node_modules
 jspm_packages/
 
@@ -107,5 +106,5 @@ dist
 .tern-port
 
 .DS_Store
-node_modules
 .vscode
+build/
