--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,7 @@
     "dataloader": "^2.0.0",
     "dotenv": "^8.2.0",
     "graphql": "^15.3.0",
+    "graphql-depth-limit": "^1.1.0",
     "graphql-tag": "^2.11.0",
     "mysql2": "^2.2.5",
     "sequelize": "^6.3.5",
@@ -23,6 +24,7 @@
     "@graphql-codegen/cli": "^1.17.8",
     "@graphql-codegen/typescript": "^1.17.9",
     "@graphql-codegen/typescript-resolvers": "^1.17.9",
+    "@types/graphql-depth-limit": "^1.1.2",
     "@types/jest": "^26.0.14",
     "@types/node": "^14.11.2",
     "@types/validator": "^13.1.0",
