--- a/server/package.json
+++ b/server/package.json
@@ -34,6 +34,7 @@
     "nodemon": "^2.0.4",
     "prettier": "^2.1.2",
     "sequelize-cli": "^6.2.0",
+    "ts-jest": "^26.4.1",
     "ts-node-dev": "^1.0.0-pre.63",
     "typescript": "^4.0.3"
   },
@@ -54,6 +55,7 @@
     ],
     "setupFiles": [
       "./setup-tests.ts"
-    ]
+    ],
+    "resetMocks": true
   }
 }
