--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
+    "react-tooltip": "^4.2.10",
     "styled-components": "^5.2.0",
     "typescript": "~3.7.2"
   },
@@ -59,16 +60,16 @@
     "@storybook/node-logger": "^6.0.21",
     "@storybook/preset-create-react-app": "^3.1.4",
     "@storybook/react": "^6.0.21",
+    "@types/jest": "^26.0.14",
+    "@types/node": "^12.0.0",
+    "@types/react": "^16.9.0",
+    "@types/react-dom": "^16.9.0",
     "@types/react-router-dom": "^5.1.5",
     "@types/styled-components": "^5.1.3",
     "babel-loader": "^8.1.0",
     "prettier": "^2.1.1",
     "react-is": "^16.13.1",
-    "react-test-renderer": "^16.13.1",
-    "@types/jest": "^26.0.14",
-    "@types/node": "^12.0.0",
-    "@types/react": "^16.9.0",
-    "@types/react-dom": "^16.9.0"
+    "react-test-renderer": "^16.13.1"
   },
   "jest": {
     "collectCoverageFrom": [
