--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "history": "^5.0.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-ga": "^3.1.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
     "react-tooltip": "^4.2.10",
@@ -79,7 +80,7 @@
       "!src/**/*.stories.tsx",
       "!src/types/graphql.generated.ts",
       "!src/dev-tools/**/*.*",
-      "!**/*.dev.ts"
+      "!src/**/*.d.ts"
     ]
   }
 }
